# scrollkeep

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  ROADMAP.md  calculator.py  package-lock.json  package.json  pyproject.toml  tsconfig.json
.github/workflows/: ci.yml  deploy.yml
src/mcp_server/: cli.py  config.py  logging.py  server.py
src/mcp_server/agent/: __init__.py  approval.py  context.py  loop.py  session.py  templates.py  workspace.py
src/mcp_server/channels/: __init__.py  telegram.py
src/mcp_server/llm/: __init__.py  anthropic.py  base.py  factory.py  openai.py  types.py
src/mcp_server/tools/: __init__.py  builtins.py  delegate.py  git.py  gmail.py  mcp_client.py  memory.py  registry.py  skills.py  web.py
tests/: conftest.py  test_agent.py  test_approval.py  test_context.py  test_gmail.py  test_llm.py  test_memory.py  test_server.py  test_session.py  test_tools.py  test_workspace.py
