[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcp-server"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]",
    "anthropic>=0.84",
    "openai>=2.28",
    "pydantic-settings>=2.0",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "ruff",
    "mypy",
]

[project.scripts]
scrollkeep = "mcp_server.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_server"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
src = ["src"]
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true
packages = ["mcp_server"]
mypy_path = "src"